--- a/glide.yaml
+++ b/glide.yaml
@@ -8,7 +8,7 @@ import:
   version: master
 - package: github.com/decred/dcrd
   repo: git@github.com:hybridnetwork/hxd
-  version: post-quataum
+  version: bogrod-pqdev
   subpackages:
   - blockchain
   - blockchain/stake
@@ -20,10 +20,10 @@ import:
   - wire
 - package: github.com/decred/dcrrpcclient
   repo: git@github.com:hybridnetwork/hxrpcclient
-  version: post-quataum
+  version: bogrod-pqdev
 - package: github.com/decred/dcrutil
   repo: git@github.com:hybridnetwork/hxutil
-  version: post-quataum
+  version: bogrod-pqdev
   subpackages:
   - hdkeychain
 - package: github.com/golang/protobuf
