--- a/sample-hxwallet.conf
+++ b/sample-hxwallet.conf
@@ -1,7 +1,7 @@
 [Application Options]
 
 ; ------------------------------------------------------------------------------
-; Decred wallet settings
+; Hx wallet settings
 ; ------------------------------------------------------------------------------
 
 ; Use testnet (cannot be used with simnet=1).
@@ -21,10 +21,10 @@
 ; The directory to open and save wallet, transaction, and unspent transaction
 ; output files.  Two directories, `mainnet` and `testnet` are used in this
 ; directory for mainnet and testnet wallets, respectively.
-; appdata=~/.dcrwallet
+; appdata=~/.hxwallet
 
 ; Set txfee and ticketfee that will be used on startup.  They can be changed with
-; dcrctl --wallet settxfee/setticketfee as well
+; hxctl --wallet settxfee/setticketfee as well
 ; txfee=0.001
 ; ticketfee=0.001
 
@@ -40,11 +40,11 @@
 ; proxyuser=
 ; proxypass=
 
-; The server and port used for dcrd websocket connections.
+; The server and port used for hxd websocket connections.
 ; rpcconnect=localhost:9109
 
-; File containing root certificates to authenticate a TLS connections with dcrd
-; cafile=~/.dcrdwallet/dcrd.cert
+; File containing root certificates to authenticate a TLS connections with hxd
+; cafile=~/.hxdwallet/hxd.cert
 
 
 
@@ -53,8 +53,8 @@
 ; ------------------------------------------------------------------------------
 
 ; TLS certificate and key file locations
-; rpccert=~/.dcrwallet/rpc.cert
-; rpckey=~/.dcrwallet/rpc.key
+; rpccert=~/.hxwallet/rpc.cert
+; rpckey=~/.hxwallet/rpc.key
 
 ; Curve to use when autogenerating TLS keypairs
 ; tlscurve=P-521
@@ -114,16 +114,16 @@
 ; RPC settings (both client and server)
 ; ------------------------------------------------------------------------------
 
-; Username and password to authenticate to a dcrd RPC server and authenticate
-; new client connections to dcrwallet.
+; Username and password to authenticate to a hxd RPC server and authenticate
+; new client connections to hxwallet.
 ; username=
 ; password=
 
-; Alternative username and password for dcrd.  If set, these will be used
+; Alternative username and password for hxd.  If set, these will be used
 ; instead of the username and password set above for authentication to a
-; dcrd RPC server.
-; dcrdusername=
-; dcrdpassword=
+; hxd RPC server.
+; hxdusername=
+; hxdpassword=
 
 
 ; ------------------------------------------------------------------------------
