--- a/glide.yaml
+++ b/glide.yaml
@@ -7,7 +7,7 @@ import:
 - package: github.com/hybridnetwork/bitset
   version: master
 - package: github.com/hybridnetwork/hxd
-  version: rc1.0
+  version: dev
   subpackages:
   - blockchain
   - blockchain/stake
